--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-PySerial
-boltons
+boltons==17.1.0
+boto3==1.4.7
+botocore==1.7.20
+docutils==0.14
+futures==3.1.1
+jmespath==0.9.3
+pyserial==3.4
+python-dateutil==2.6.1
+s3transfer==0.1.11
+six==1.11.0
